wip: sample/interactive-lch.js

--- a/sample/package.json
+++ b/sample/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "indexed-png": "^0.0.6",
-    "kung-fig": "^0.67.3"
+    "kung-fig": "^0.67.3",
+    "terminal-kit": "^3.1.1"
   }
 }
